<resources>
    <string name="app_name">Caravans</string>
    <string name="menu_settings">Settings</string>
    
    <!-- ACTIVITY TITLES -->
    <string name="title_decrypt_single">Decrypt Single File</string>
    <string name="title_encrypt_single">Encrypt Single File</string>
    <string name="title_new_folder">Add New Encrypted Folder</string>
    <string name="title_settings">Application Settings</string>
    <string name="title_performance_test">Performance Test</string>
    <string name="title_view_folders">View Folders</string>
    <string name="title_enc_folder">Encrypted Folder</string>
    
	<!-- TEXT STRINGS -->
    <string name="text_file_size">File size</string>
    <string name="text_test_count">Test Count</string>
    <string name="text_pattern">Pattern</string>
    <string name="text_select_security_input">Security Input</string>
    <string name="text_pattern_selected">Pattern is SET!</string>
    <string name="text_switch_to_pass">Switch to Password</string>
    <string name="text_add_new_enc_folder">Add New Encrypted Folder</string>
    <string name="text_encrypt_file">Encrypt File</string>
    <string name="text_decrypt_file">Decrypt File</string>
    <string name="text_settings">Settings</string>
    <string name="text_run_performance_test">Run Performance Test</string>
    <string name="text_folder_location">Folder Location</string>
    <string name="text_password">Password</string>
    <string name="text_retype_password">Re-type Password</string>
    <string name="text_algorithm">Algorithm</string>
    <string name="text_new_enc_folder">New Encrypted Folder</string>
    <string name="text_file_to_decrypt">File to Decrypt</string>
    <string name="text_file_to_encrypt">File to Encrypt</string>
    <string name="text_dest_folder">Destination Folder</string>
    <string name="text_decrypt_file">Decrypt File</string> 
    <string name="text_help">Help</string>
    <string name="text_encrypted_folders">Encrypted Folders</string>
    <string name="text_search">Search</string>
    <string name="text_listening">Listening:</string>
    <string name="text_refresh">Refresh</string>
    <string name="text_stop_all">Stop All</string>
    <string name="text_path">Path</string>
    <string name="text_folder">Folder</string>
    <string name="text_create_enc_folder">Create New Encrypted Folder</string>
    <string name="text_no_enc_folder">No Encrypted Folder Found, Create new Folder by clicking the button below</string>
    <string name="text_reset">Reset</string>
    <string name="text_delete_original_file">Delete Original File</string>
    <string name="text_show_password">Show Password</string>
    
    <!-- ALGORITHMS -->
    <string name="algorithm_aes">AES</string>
    <string name="algorithm_twofish">Two Fish</string>
    <string name="algorithm_serpent">Serpent</string>
    <string name="algorithm_auto">Auto</string>
   
	<!-- PREFERENCES -->
	<string name="preferences_category_main">Main Preferences</string>
	<string name="preferences_category_debugging">Debugging Preferences</string>
	
	<string name="preferences_key_decrypted_folder">decrypted_folder_key</string>
	<string name="preferences_decrypted_folder_title">Decrypted Files Storage</string>
	<string name="preferences_decrypted_folder_summary">Directory path where decrypted files will be stored</string>
	
	<string name="preferences_key_power_saving">power_saving</string>
	<string name="preferences_power_saving_title">Power Saver Mode</string>
	<string name="preferences_power_saving_summary">Toggles power saving mode</string>
	
	<string name="preferences_key_debugging_mode">debugging_mode</string>
	<string name="preferences_debugging_mode_title">Debug Mode</string>
	<string name="preferences_debugging_mode_summary">Toggle debugging mode</string>
	
	<string name="preferences_key_sdcard_logging">sdcard_logging</string>
	<string name="preferences_sdcard_logging_title">Log to SDCARD</string>
	<string name="preferences_sdcard_logging_summary">Write logs to sdcard, this may affect performance</string>
	
	<string name="preferences_default_decrypted_folder">/mnt/sdcard/Caravans/Decrypted/</string>
	
	<!-- COLORS 
	<string name="color_green">#66CC33</string>
	<string name="color_orange">#FF3300</string>
	<string name="color_grey">#aaaaaa</string>
	<string name="color_white">#ffffff</string>
	-->
	
	
	
	
</resources>