<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >    
	<PreferenceCategory android:title="@string/preferences_category_main">
	    <EditTextPreference 
	        android:title="@string/preferences_decrypted_folder_title" 
	        android:key="@string/preferences_key_decrypted_folder"
	        android:summary="@string/preferences_decrypted_folder_summary"
	        android:defaultValue="@string/preferences_default_decrypted_folder"/>
	    
	    <CheckBoxPreference 
	        android:key="@string/preferences_key_power_saving"
	        android:title="@string/preferences_power_saving_title" 
	        android:summary="@string/preferences_power_saving_summary"
	        android:defaultValue="true"/>
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/preferences_category_debugging">
	    <CheckBoxPreference 
	        android:key="@string/preferences_key_debugging_mode"
	        android:title="@string/preferences_debugging_mode_title"
	        android:summary="@string/preferences_debugging_mode_summary"
	        android:defaultValue="true"/>
	    
	    <CheckBoxPreference 
	        android:key="@string/preferences_key_sdcard_logging"
	        android:title="@string/preferences_sdcard_logging_title"
	        android:summary="@string/preferences_sdcard_logging_summary"
	        android:defaultValue="false"
	        android:dependency="@string/preferences_key_debugging_mode"/>
	</PreferenceCategory>
</PreferenceScreen>