<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background" 
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <ImageButton
        android:id="@+id/new_enc_folder_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="29dp"
        android:onClick="onClick"
        android:src="@drawable/new_folder_plus"
        android:contentDescription="@string/text_add_new_enc_folder"/>

	<ImageButton
	    android:id="@+id/encrypt_btn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@id/new_enc_folder_btn"
	    android:layout_marginLeft="17dp"
	    android:layout_toRightOf="@id/new_enc_folder_btn"
	    android:onClick="onClick"
	    android:src="@drawable/encrypt"
	    android:contentDescription="@string/text_encrypt_file"/>
	
	<ImageButton
        android:id="@+id/decrypt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/new_enc_folder_btn"
        android:layout_alignRight="@id/new_enc_folder_btn"
        android:layout_below="@id/new_enc_folder_btn"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:src="@drawable/decrypt"
        android:contentDescription="@string/text_decrypt_file"/>
	
	<ImageButton
        android:id="@+id/folders_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/encrypt_btn"
        android:layout_alignRight="@id/encrypt_btn"
        android:layout_below="@id/encrypt_btn"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:src="@drawable/enc_folders"
        android:contentDescription="@string/text_encrypted_folders"/>
	
	<ImageButton
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/decrypt_btn"
        android:layout_alignRight="@id/decrypt_btn"
        android:layout_below="@id/decrypt_btn"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:src="@drawable/settings" 
        android:contentDescription="@string/text_settings"/>
	
<!--     <ImageButton -->
<!--         android:id="@+id/help_btn" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_alignLeft="@id/folders_btn" -->
<!--         android:layout_alignRight="@id/folders_btn" -->
<!--         android:layout_below="@id/folders_btn" -->
<!--         android:layout_marginTop="20dp" -->
<!--         android:onClick="onClick" -->
<!--         android:src="@drawable/help"  -->
<!--         android:contentDescription="@string/text_encrypted_folders"/> -->
	
</RelativeLayout>