<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">
    
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 
    <EditText
        android:id="@+id/inp_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword">
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_retype_password"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
    <EditText
        android:id="@+id/inp_password_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword">
    </EditText>
    
    <CheckBox 
        android:id="@+id/chk_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_show_password"
        android:textColor="#ffffff"
        android:button="@drawable/small_checkbox"
        android:background="@drawable/small_checkbox_background"
        android:layout_marginTop="3dp"/>

</LinearLayout>